fix wrong background of register on home page

--- a/themes/goalify/source/css/site/_home.scss
+++ b/themes/goalify/source/css/site/_home.scss
@@ -3,6 +3,7 @@
 		max-width: 1080px;
 		margin: 60px auto 150px;
 		background-color: $purple;
+		background-image: none;
 	}
 
 	&__revenue {
